Fixed spacing of navbar links

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -25,6 +25,10 @@ Black
     color: #FD4D0C;
 }
 
+#leaderboard-link{
+    margin-left: 15px;
+}
+
 
 /*MAIN CONTENT*/
 
@@ -43,7 +47,7 @@ body {
 .text-box {
     background-color: rgba(93, 177, 151, 0.9);
     color: black;
-    width: 50vw;
+    width: 60vw;
     padding: 20px;
     text-align: center;
     top: 50%;
@@ -55,6 +59,7 @@ body {
 h1 {
     font-family: "Lobster", cursive;
     font-size: 100px;
+    text-align: center;
 }
 
 h2 {
